# indy-crypto-fuzz-target

./: .gitignore  Cargo.toml  build.rs
in/: seed
in/generator-from-bytes/: seed
in/multisignature-from-bytes/: seed
in/signkey-from-bytes/: seed
in/signkey-new/: seed
out.1/: .cur_input  fuzzer_stats  plot_data
out.1/crashes/: README.txt  id:000000,sig:06,src:000000,op:havoc,rep:16
out.1/queue/: id:000001,src:000000,op:flip1,pos:0  id:000002,src:000000,op:flip1,pos:0,+cov  id:000004,src:000000,op:flip1,pos:1  id:000006,src:000000,op:flip1,pos:2  id:000009,src:000000,op:flip1,pos:2  id:000011,src:000000,op:flip1,pos:4  id:000014,src:000000,op:flip1,pos:9  id:000015,src:000000,op:flip1,pos:12  id:000017,src:000000,op:flip2,pos:21  id:000018,src:000000,op:flip2,pos:24
src/: generator_from_bytes.rs  main.rs  multi_signature_from_bytes.rs  sign_key_from_bytes.rs  signature_from_bytes.rs  signkey_new.rs  verkey_from_bytes.rs
